--- a/internal/views/board.templ
+++ b/internal/views/board.templ
@@ -6,6 +6,7 @@ import (
 )
 
 templ ConnectFourBoard(game *connectfour.Game, board connectfour.Board) {
+    <script src="/public/scripts/board_sse.js"></script>
     <div id="board" class="w-full max-w-lg mx-auto">
         <div id="dropzone-container">
             @dropZone(game, board)
@@ -17,13 +18,13 @@ templ ConnectFourBoard(game *connectfour.Game, board connectfour.Board) {
                         <div class="aspect-square bg-primary-focus rounded-full p-0.5 md:p-1">
                             if cell == 'O' {
                                 <div class="w-full h-full bg-warning rounded-full">
-                                    if board.IsWinningCell(i, j) {
+                                    if !game.InProgress() && board.IsWinningCell(i, j) {
                                         <div class="w-full h-full bg-warning/50 rounded-full animate__animated animate__heartBeat animate__infinite"></div>
                                     }
                                 </div>
                             } else if cell == 'X' {
                                 <div class="w-full h-full bg-error rounded-full">
-                                    if board.IsWinningCell(i, j) {
+                                    if !game.InProgress() && board.IsWinningCell(i, j) {
                                         <div class="w-full h-full bg-error/50 rounded-full animate__animated animate__heartBeat animate__infinite"></div>
                                     }
                                 </div>
@@ -39,37 +40,6 @@ templ ConnectFourBoard(game *connectfour.Game, board connectfour.Board) {
             @playControls(game)
         </div>
     </div>
-    <script>
-        function setupSSE() {
-            if (typeof EventSource !== "undefined") {
-                var source = new EventSource('/game/stream');
-
-                source.onopen = function(event) {
-                    console.log('SSE connection opened', event);
-                };
-
-                source.onerror = function(event) {
-                    console.error('SSE connection error', event);
-                };
-
-                source.addEventListener('board-update', function(event) {
-                    console.log('Board update received');
-                    document.getElementById('board-container').innerHTML = event.data;
-                    htmx.process(document.getElementById('board-container'));
-                });
-
-                source.addEventListener('score-update', function(event) {
-                    console.log('Score update received');
-                    document.getElementById('score-container').innerHTML = event.data;
-                });
-            } else {
-                console.error('SSE not supported');
-            }
-        }
-
-        document.addEventListener('htmx:load', setupSSE);
-        setupSSE();  // Call it immediately as well
-    </script>
 }
 
 templ dropZone(game *connectfour.Game, board connectfour.Board) {
@@ -96,7 +66,36 @@ templ dropZone(game *connectfour.Game, board connectfour.Board) {
 }
 
 templ playControls(game *connectfour.Game) {
+    if !game.HasHuman() {
+            if game.State == connectfour.GameStateNew || game.State == connectfour.GameStateStopped {
+                <div class="flex justify-center space-x-4 mt-6">
+                    <button
+                        class="btn btn-accent btn-lg text-white rounded-full w-full shadow-md transition-all duration-300 hover:scale-105 hover:shadow-lg flex items-center"
+                        hx-post="/game/move"
+                        hx-target=""
+                    >Start</button>
+                </div>
+            } else if game.InProgress() {
+                <div class="flex justify-center space-x-4 mt-6">
+                    <button
+                        class="btn btn-accent btn-lg text-white rounded-full w-full shadow-md transition-all duration-300 hover:scale-105 hover:shadow-lg flex items-center"
+                        hx-post="/game/stop"
+                        hx-target=""
+                    >Stop</button>
+                </div>
+            }
+    }
+
     <div class="flex justify-center space-x-4 mt-6">
+        <button
+            class="btn btn-circle btn-info btn-outline border-2 btn-lg text-white shadow-md transition-all duration-300 hover:scale-105 hover:shadow-lg flex items-center"
+            hx-target="#root"
+            hx-get="/game"
+            hx-trigger="click">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+            </svg>
+        </button>
         <button
             class="btn btn-outline bg-gray-500/50 btn-lg text-white rounded-full shadow-md transition-all duration-300 hover:scale-105 hover:shadow-lg flex items-center"
             hx-get="/"
@@ -120,12 +119,5 @@ templ playControls(game *connectfour.Game) {
                 Play Again
             }
         </button>
-        if !game.HasHuman() && game.State == connectfour.GameStateNew {
-            <button
-                class="btn btn-accent btn-lg text-white rounded-full shadow-md transition-all duration-300 hover:scale-105 hover:shadow-lg flex items-center"
-                hx-post="/game/move"
-                hx-target=""
-            >Start</button>
-        }
     </div>
 }
